--- a/predict/index.html
+++ b/predict/index.html
@@ -54,13 +54,14 @@
         var photo = 12;
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/p5.js"></script>
+    <script language="javascript" type="text/javascript" src="https://cdn.jsdelivr.net/npm/p5.serialserver@0.0.28/lib/p5.serialport.js"></script>
     <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
     <!-- <script src="https://cdn.jsdelivr.net/gh/ml5js/Intro-ML-Arts-IMA@ml5-build-10-13-19-2/ml5_build/ml5.min.js"></script> -->
 
 </head>
 
 <body>
-    <header>
+    <header id="header">
         <div id="preLoad">
             <img src="main_assets/JPL_icons/custome/1.svg">
             <img src="main_assets/JPL_icons/custome/2.svg">
@@ -195,4 +196,5 @@
     <script src="helper.js"></script>
     <script src="sketch.js"></script>
 
-</body></html>
+</body>
+</html>
